// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check run should run without error with inputs 1`] = `
"Validate context event...
Get pull request info...
Validate title...
  ✔︎ Requirement title is valid
Validate labels...
  ✔︎ Requirement labels is valid
Validate users...
  ✔︎ Requirement users is valid
Validate teams...
  ✔︎ Requirement teams is valid
Approve pull request...
Enable auto-merge on pull request...
🎉  The pull request will be merged automatically!"
`;

exports[`Check run should run without error without inputs 1`] = `
"Validate context event...
Get pull request info...
Validate title...
  ○ Requirement title was ignored
Validate labels...
  ○ Requirement labels was ignored
Validate users...
  ○ Requirement users was ignored
Validate teams...
  ○ Requirement teams was ignored
Approve pull request...
Enable auto-merge on pull request...
🎉  The pull request will be merged automatically!"
`;

exports[`Check run should throw an Error with pull request closed 1`] = `
"Validate context event...
Get pull request info...
❌  The pull request is not opened"
`;

exports[`Check run should throw an Error with pull request conflicts 1`] = `
"Validate context event...
Get pull request info...
Validate title...
  ○ Requirement title was ignored
Validate labels...
  ○ Requirement labels was ignored
Validate users...
  ○ Requirement users was ignored
Validate teams...
  ○ Requirement teams was ignored
Approve pull request...
❌  The pull request cannot be merged due to merge conflicts"
`;

exports[`Check run should throw an Error with pull request not mergeable 1`] = `
"Validate context event...
Get pull request info...
Validate title...
  ○ Requirement title was ignored
Validate labels...
  ○ Requirement labels was ignored
Validate users...
  ○ Requirement users was ignored
Validate teams...
  ○ Requirement teams was ignored
Approve pull request...
❌  The pull request cannot be merged"
`;

exports[`Check run should throw an Error with wrong "event" 1`] = `
"Validate context event...
❌  This action does not supports \\"lorem\\" events"
`;

exports[`Check run should throw an Error with wrong "labels" 1`] = `
"Validate context event...
Get pull request info...
Validate title...
  ○ Requirement title was ignored
Validate labels...
  ✘︎ Requirement labels is not valid
❌  The pull request does not have the required labels: lorem"
`;

exports[`Check run should throw an Error with wrong "teams" 1`] = `
"Validate context event...
Get pull request info...
Validate title...
  ○ Requirement title was ignored
Validate labels...
  ○ Requirement labels was ignored
Validate users...
  ○ Requirement users was ignored
Validate teams...
  ✘︎ Requirement teams is not valid
❌  User \\"author\\" is not part of any teams"
`;

exports[`Check run should throw an Error with wrong "title" 1`] = `
"Validate context event...
Get pull request info...
Validate title...
  ✘︎ Requirement title is not valid
❌  The title of the pull request does not match the search: lorem"
`;

exports[`Check run should throw an Error with wrong "users" 1`] = `
"Validate context event...
Get pull request info...
Validate title...
  ○ Requirement title was ignored
Validate labels...
  ○ Requirement labels was ignored
Validate users...
  ✘︎ Requirement users is not valid
❌  User \\"author\\" is not authorized"
`;
